# altis_sycl

./: .gitignore  README.md  benchmarks.md
cross_accelerator/: CMakeLists.txt
cross_accelerator/cuda/: CMakeLists.txt
cross_accelerator/cuda/common/: cuda_device_attr.h  main.dp.cpp  support.h
cross_accelerator/cuda/level1/bfs/: CMakeLists.txt  bfs.dp.cpp
cross_accelerator/cuda/level1/gemm/: CMakeLists.txt  Gemm.dp.cpp
cross_accelerator/cuda/level1/gups/: CMakeLists.txt  gups.dp.cpp
cross_accelerator/cuda/level1/pathfinder/: CMakeLists.txt  pathfinder.dp.cpp
cross_accelerator/cuda/level1/sort/: CMakeLists.txt  Sort.dp.cpp  Sort.h  sort_kernel.dp.cpp  sort_kernel.h
cross_accelerator/cuda/level2/: CMakeLists.txt
cross_accelerator/cuda/level2/cfd/: CMakeLists.txt  euler3d.dp.cpp  euler3d_double.dp.cpp
cross_accelerator/cuda/level2/dwt2d/: CMakeLists.txt  common.h  components.dp.cpp  dwt.dp.cpp  dwt.h  dwt_main.dp.cpp
cross_accelerator/cuda/level2/dwt2d/dwt_cuda/: common.h  dwt.h  fdwt53.dp.cpp  fdwt97.dp.cpp  rdwt53.dp.cpp  transform_buffer.h
cross_accelerator/cuda/level2/fdtd2d/: CMakeLists.txt  fdtd2d.dp.cpp  polybenchUtilFuncts.h
cross_accelerator/cuda/level2/kmeans/: CMakeLists.txt  genericvector.h  kmeans-common.h  kmeansraw.h  kmmain.dp.cpp
cross_accelerator/cuda/level2/kmeans/inputs/: random-n131072-d32-c32.txt
cross_accelerator/cuda/level2/lavamd/: CMakeLists.txt  lavaMD.dp.cpp  lavaMD.h  lavaMD.h.yaml
cross_accelerator/cuda/level2/lavamd/kernel/: kernel_gpu_cuda.dp.cpp  kernel_gpu_cuda_wrapper.dp.cpp  kernel_gpu_cuda_wrapper.h
cross_accelerator/cuda/level2/mandelbrot/: CMakeLists.txt  mandelbrot.dp.cpp
cross_accelerator/cuda/level2/nw/: CMakeLists.txt  needle.dp.cpp  needle.h  needle_kernel.dp.cpp
cross_accelerator/cuda/level2/particlefilter/: CMakeLists.txt  ex_particle_CUDA_float_seq.dp.cpp  ex_particle_CUDA_naive_seq.dp.cpp
cross_accelerator/cuda/level2/raytracing/: CMakeLists.txt
cross_accelerator/cuda/level2/raytracing/raytracing_cuda/: CMakeLists.txt  camera.h  hitable.h  hitable_list.h  material.h  random_gen.h  ray.h  raytracing.dp.cpp  sphere.h  vec3.h
cross_accelerator/cuda/level2/srad/: CMakeLists.txt  srad.dp.cpp  srad.h  srad_kernel.dp.cpp
cross_accelerator/cuda/level2/where/: CMakeLists.txt  where.dp.cpp
cross_accelerator/cuda/level2/yolo/include/: darknet.h  darknet.h.yaml
cross_accelerator/cuda/level2/yolo/src/: activation_kernels.dp.cpp  activations.h  activations.h.yaml  avgpool_layer_kernels.dp.cpp  blas_kernels.dp.cpp  box.h  box.h.yaml  col2im_kernels.dp.cpp  convolutional_kernels.dp.cpp  crop_layer_kernels.dp.cpp  cuda.h  cuda.h.yaml  deconvolutional_kernels.dp.cpp  dropout_layer_kernels.dp.cpp  im2col_kernels.dp.cpp  maxpool_layer_kernels.dp.cpp
fpga_optimized/: CMakeLists.txt
fpga_optimized/cuda/: CMakeLists.txt
fpga_optimized/cuda/common/: compute_unit.hpp  compute_unit_nd.hpp  cudacommon.h  fpga_pwr.hpp  main.dp.cpp  memory_utils.hpp  support.h
fpga_optimized/cuda/level2/: CMakeLists.txt
fpga_optimized/cuda/level2/cfd/: CMakeLists.txt  euler3d.dp.cpp  euler3d_double.dp.cpp
fpga_optimized/cuda/level2/dwt2d/: components.h
fpga_optimized/cuda/level2/dwt2d/dwt_cuda/: fdwt97.dp.cpp  io.h  rdwt97.dp.cpp
fpga_optimized/cuda/level2/fdtd2d/: fdtd2d.dp.cpp
fpga_optimized/cuda/level2/kmeans/: CMakeLists.txt  genericvector.h  kmeans-common.h  kmeansraw copy.h  kmeansraw.dp.cpp  kmeansraw.h  kmmain.dp.cpp  testsuitedecl.h
fpga_optimized/cuda/level2/kmeans/inputs/: random-n16384-d24-c16.txt  random-n65536-d32-c16.txt  random50000_12
fpga_optimized/cuda/level2/lavamd/: CMakeLists.txt  lavaMD.dp.cpp  lavaMD.h
fpga_optimized/cuda/level2/lavamd/kernel/: kernel_gpu_cuda.dp.cpp  kernel_gpu_cuda_wrapper.dp.cpp  kernel_gpu_cuda_wrapper.h
fpga_optimized/cuda/level2/mandelbrot/: CMakeLists.txt  mandelbrot.dp.cpp
fpga_optimized/cuda/level2/nw/: CMakeLists.txt  needle.dp.cpp  needle.h  needle_kernel.dp.cpp
fpga_optimized/cuda/level2/particlefilter/: CMakeLists.txt  ex_particle_CUDA_float_seq.dp.cpp  ex_particle_CUDA_naive_seq.dp.cpp
fpga_optimized/cuda/level2/raytracing/: CMakeLists.txt
fpga_optimized/cuda/level2/srad/: CMakeLists.txt  srad.dp.cpp  srad.h  srad_kernel.h
fpga_optimized/cuda/level2/where/: CMakeLists.txt  where.dp.cpp
kmeans_inputs/: README.md
unmodified_migration/: CMakeLists.txt
unmodified_migration/cuda/: CMakeLists.txt
unmodified_migration/cuda/common/: cuda_device_attr.h  cudacommon.h  cudacommon.h.yaml  main.dp.cpp  support.h  support.h.yaml
unmodified_migration/cuda/level0/busspeeddownload/: BusSpeedDownload.dp.cpp
unmodified_migration/cuda/level0/busspeedreadback/: BusSpeedReadback.dp.cpp  README
unmodified_migration/cuda/level0/devicememory/: DeviceMemory.dp.cpp
unmodified_migration/cuda/level0/maxflops/: MaxFlops.dp.cpp
unmodified_migration/cuda/level1/bfs/: README  bfs.dp.cpp
unmodified_migration/cuda/level1/gemm/: Gemm.dp.cpp
unmodified_migration/cuda/level1/gups/: gups.dp.cpp
unmodified_migration/cuda/level1/pathfinder/: pathfinder.dp.cpp
unmodified_migration/cuda/level1/sort/: Sort.dp.cpp  Sort.h  Sort.h.yaml  sort_kernel.dp.cpp  sort_kernel.h  sort_kernel.h.yaml
unmodified_migration/cuda/level2/cfd/: euler3d.dp.cpp  euler3d_double.dp.cpp
unmodified_migration/cuda/level2/dwt2d/: components.dp.cpp  dwt.dp.cpp  dwt_main.dp.cpp
unmodified_migration/cuda/level2/fdtd2d/: fdtd2d.dp.cpp
unmodified_migration/cuda/level2/kmeans/: genericvector.h  genericvector.h.yaml  kmeans-common.h  kmeans-common.h.yaml  kmeansraw.dp.cpp  kmeansraw.h  kmeansraw.h.yaml  kmmain.dp.cpp
unmodified_migration/cuda/level2/lavamd/: lavaMD.dp.cpp  lavaMD.h  lavaMD.h.yaml
unmodified_migration/cuda/level2/mandelbrot/: mandelbrot.dp.cpp
unmodified_migration/cuda/level2/nw/: needle.dp.cpp  needle_kernel.dp.cpp
unmodified_migration/cuda/level2/particlefilter/: ex_particle_CUDA_float_seq.dp.cpp  ex_particle_CUDA_naive_seq.dp.cpp
unmodified_migration/cuda/level2/srad/: srad.dp.cpp  srad_kernel.dp.cpp
unmodified_migration/cuda/level2/where/: where.dp.cpp
(+43 files in other folders)
